Add category updater
Needs more testing